--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,7 @@ install:
 script:
   - git clone https://github.com/project-flogo/microgateway.git $GOPATH/src/github.com/project-flogo/microgateway
   - pushd $GOPATH/src/github.com/project-flogo/microgateway
-  - go test -p 1 ./... 2
+  - export GO111MODULE=on
+  - go build ./...
+  - go test -p 1 ./... -v 2
   - popd
