--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,12 @@ script:
 #   - go install ./...
 #   #- go test -p 1 ./... -v 2
 #   - popd
-  - git clone https://github.com/project-flogo/rules.git $GOPATH/src/github.com/project-flogo/rules
-  - pushd $GOPATH/src/github.com/project-flogo/rules
+#   - git clone https://github.com/project-flogo/rules.git $GOPATH/src/github.com/project-flogo/rules
+#   - pushd $GOPATH/src/github.com/project-flogo/rules
+  - git clone https://github.com/project-flogo/rules.git $HOME
+  - pushd $HOME
   - git checkout feature-invoke-activity
-  - export GO111MODULE=on
+#   - export GO111MODULE=on
 #   - go build ./...
   - go test -v ./...
   - popd
