--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,19 @@ script:
 #   - popd
 #   - git clone https://github.com/project-flogo/rules.git $GOPATH/src/github.com/project-flogo/rules
 #   - pushd $GOPATH/src/github.com/project-flogo/rules
-  - mkdir -p $HOME/test/rules
-  - git clone https://github.com/project-flogo/rules.git $HOME/test/rules
-  - pushd $HOME/test/rules
-  - git checkout feature-invoke-activity
+#   - mkdir -p $HOME/test/rules
+#   - git clone https://github.com/project-flogo/rules.git $HOME/test/rules
+#   - pushd $HOME/test/rules
+#   - git checkout feature-invoke-activity
 #   - export GO111MODULE=on
 #   - go build ./...
+#   - go test -v ./...
+  - git clone https://github.com/project-flogo/rules.git $GOPATH/src/github.com/project-flogo/rules
+  - pushd $GOPATH/src/github.com/project-flogo/rules
+  - git checkout feature-example-gotests
+  - git checkout feature-invoke-activity
+  - export GO111MODULE=on
+  - go build ./...
   - go test -v ./...
   - popd
 #   docker-compose help
