--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ install:
 script:
   - git clone https://github.com/project-flogo/rules.git $GOPATH/src/github.com/project-flogo/rules
   - pushd $GOPATH/src/github.com/project-flogo/rules
-  - git checkout develop
+  - git checkout chore-fix-gotests
 #   - rm -rf go.sum
-#   - export GO111MODULE=on
+  - export GO111MODULE=on
   - go build ./...
   - go test -v -short ./...
   - popd
