--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
 #   - rm -rf go.sum
   - export GO111MODULE=on
   - go build ./...
-  - go test -v -short ./...
+  - go test -v ./...
   - popd
