--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
 #   - rm -rf go.sum
   - export GO111MODULE=on
 #   - go build ./...
-  - go test -p 1 ./...
+  - go test -v ./...
   - popd
