--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 #   - rm -rf go.sum
   - export GO111MODULE=on
 #   - go build ./...
-  - go test -v ./...
+#   - go test -v ./...
   - popd
   
 notifications:
