--- a/.travis.yml
+++ b/.travis.yml
@@ -10,20 +10,20 @@ services:
 
 install:
   - go get -u github.com/ains/go-test-html
-  - go get github.com/project-flogo/cli/...
-  - go get github.com/project-flogo/rules/...
-  - go get github.com/project-flogo/legacybridge
-  - go get github.com/imdario/mergo
+#   - go get github.com/project-flogo/cli/...
+#   - go get github.com/project-flogo/rules/...
+#   - go get github.com/project-flogo/legacybridge
+#   - go get github.com/imdario/mergo
+
+before_script:
+  - curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
+  - sudo apt-get install apt-transport-https --yes
+  - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+  - sudo apt-get update
+  - sudo apt-get install helm
 
 script:
-#   - git clone https://github.com/project-flogo/rules.git $GOPATH/src/github.com/project-flogo/rules
-  - pushd $GOPATH/src/github.com/project-flogo/rules
-  - git checkout develop
-#   - rm -rf go.sum
-  - export GO111MODULE=on
-#   - go build ./...
-#   - go test -v ./...
-  - popd
+  - helm
   
 notifications:
   email:
