--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,17 @@ install:
 #   - go get github.com/project-flogo/legacybridge
 #   - go get github.com/imdario/mergo
 
-before_script:
-  - curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
-  - sudo apt-get install apt-transport-https --yes
-  - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
-  - sudo apt-get update
-  - sudo apt-get install helm
+# before_script:
+#   - curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
+#   - sudo apt-get install apt-transport-https --yes
+#   - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+#   - sudo apt-get update
+#   - sudo apt-get install helm
 
 script:
+  - curl https://get.helm.sh/helm-v3.1.1-linux-amd64.tar.gz
+  - tar -zxvf helm-v3.1.1-linux-amd64.tar.gz
+  - sudo mv linux-amd64/helm /usr/local/bin/helm
   - helm version
   
 notifications:
