--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
 #   - sudo apt-get install helm
 
 script:
-  - curl https://get.helm.sh/helm-v3.1.1-linux-amd64.tar.gz
+  - wget https://get.helm.sh/helm-v3.1.1-linux-amd64.tar.gz
   - tar -zxvf helm-v3.1.1-linux-amd64.tar.gz
   - sudo mv linux-amd64/helm /usr/local/bin/helm
   - helm version
